--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.android.support:recyclerview-v7:23.2.1'
-    //
+    // glide
     compile 'com.github.bumptech.glide:glide:3.5.2'
 }
